--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -38,6 +38,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/button1"
-        android:text="" />
+        android:text=""
+        android:textColor="#FFF"
+        android:textSize="14sp" />
 
 </RelativeLayout>
