--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -35,10 +35,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/button1"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/button1"
-        android:text=""
+        android:layout_marginTop="87dp"
         android:textColor="#FFF"
         android:textSize="14sp" />
 
