--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000"
+    android:background="#FFF"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,12 +11,13 @@
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent" 
+    	android:layout_height="wrap_content" 
+    	android:gravity="center"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:text="@string/banner"
-        android:textColor="#06C"
+        android:textColor="#FF4422"
         android:textSize="24sp" />
 
     <Button
@@ -27,8 +28,11 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="98dp"
+        android:background="@drawable/payface_button"
+        android:onClick="imageCapture"
         android:text="@string/startPayFace"
-        android:onClick="imageCapture" />
+        android:textColor="#FF4422"
+        android:textColorHint="#CC5533" />
 
     <TextView
         android:id="@+id/textView2"
